refs ITC-148: fixes no background for spotlight on IE8 and under issue

--- a/style.css
+++ b/style.css
@@ -1475,7 +1475,15 @@ h5.home_date {
 
     #home_main article .entry-content { width: 75%; }
 
-    #home_spotlight { background-color: rgba(255,255,255,0.85); width: 300px; position: absolute; bottom: 30px; right: 0; padding: 30px; }
+    #home_spotlight {
+        background-color: rgb(255,255,255);
+        width: 300px;
+        position: absolute;
+        bottom: 30px;
+        right: 0;
+        padding: 30px;
+        opacity: .85;
+    }
 
     #home_secondary {
         float: left;
